syntax = "proto3";

option objc_class_prefix = "aufax";

package price;

service Price {
  rpc GetPrice (GetPriceRequest) returns (GetPriceReply) {}
}

message GetPriceRequest {
  string from_currency = 2;
  string to_currency = 3;
}

message GetPriceReply {
  string price_id = 1;
  float price = 2;
  string from_currency = 3;
  string to_currency = 4;
}

message EmptyReply {}